@@ -1,5 +1,11 @@
 2008-04-22  Luca Bruno  <lethalman88@gmail.com>
 
+	* tests/testinterp.c (main): added another ensure test
+
+	* st/kernel/Signal.st (handlerContextStartingFrom): added
+	(signal): use a more sane approach
+	(handlerContext):
+
 	* syx/syx-interp.c (syx_interp_do_special): fix block self return
 	(syx_interp_swap_context): implemented
 
